# cob

./: .travis.yml  CMakeLists.txt
include/: ASTGraphVisitor.h  CodegenVisitor.h  IVisitor.h  TCheckVisitor.h  lex.h  parser.h
src/: ASTGraphVisitor.cpp  CMakeLists.txt  CodegenVisitor.cpp  TCheckVisitor.cpp  lex.cpp  main.cpp  parser.cpp
test/: gotest.txt  incomplete.txt  klammer.txt  testinput.txt
